--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <h1>Alura Midi</h1>
 
     <section class="teclado">
-        <button onclick="alert" class="tecla tecla_pom">Pom</button>
+        <button onclick="tocaSomPom()" class="tecla tecla_pom">Pom</button>
         <button onclick="alert" class="tecla tecla_clap">Clap</button>
         <button onclick="alert" class="tecla tecla_tim">Tim</button>
         <button onclick="alert" class="tecla tecla_puff">Puff</button>
